--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 <script>
     const electron = require('electron');
     const { ipcRenderer } = electron;
+    const { exec } = require('child_process');
+    const fs = require('fs');
 
     const form = document.querySelector('form');
     form.addEventListener('submit', submitForm);
@@ -69,10 +71,30 @@
     {
         e.preventDefault();
 
-        var source = $("#sourcePath").val();
-        var destination = $("#destinationPath").val();
+        var source = $("#sourcePath").val().replace(/\\/g, '/');
+        var destination = $("#destinationPath").val().replace(/\\/g, '/');
 
-        ipcRenderer.send('source:submit, destination:submit', source, destination);
+        copy(source, destination);
+
+        //ipcRenderer.send('source:submit, destination:submit', source, destination);
+    }
+
+    function copy(source, destination)
+    {
+        // Make the parent directory
+        var folderName = source.substring(source.lastIndexOf('/'));
+        fs.mkdir(destination + folderName, source.length);
+        
+        exec('robocopy ' + source + ' ' + destination + folderName + ' *.txt *.log /e', (error, stdout, stderr) =>
+        {
+            if (error)
+            {
+                console.error(`exec error: ${error}`);
+                return;
+            }
+            console.log(`stdout: ${stdout}`);
+            console.log(`stderr: ${stderr}`);
+        });
     }
 </script>
 
