Fixed badge text bug

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
         // Change button text
         submitButton.html("Copying...");
+        resultBadge.innerHTML = "";
 
         // Remove old badge
         resultBadge.className = "";
