--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="row">
             <div class="col">
                 <h1 class="display-3">LogCopy</h1>
-                <p class="lead">This application will take a source, a destination, and copy the log/txt files with the folder structure.</p>
+                <p class="lead">This application will copy the log/txt files from a source to a destination. The folder structure will be preserved.</p>
                 <hr class="my-4">
-                <p>Enter the source and destination paths below and then press the "copy" button.</p>
+                <p>Enter the full source and destination paths below and then press the "copy" button.</p>
             </div>
         </div>
         <div class="row">
